--- a/index.html
+++ b/index.html
@@ -17,21 +17,23 @@
             height: 100vh;
         }
 
-        .logo {
-            max-width: 200px;
-            margin-bottom: 20px;
-            filter: drop-shadow(0 0 8px #ff6f00);
-        }
-
         .tagline {
-            font-size: 1.6em;
+            font-size: 2em;
             font-weight: bold;
             color: #ff6f00;
             margin-bottom: 10px;
+            text-align: center;
+            text-shadow: 0 0 8px #ff6f00;
+        }
+
+        .subtag {
+            font-size: 1em;
+            color: #bbbbbb;
+            margin-bottom: 30px;
+            text-align: center;
         }
 
         .loader {
-            margin-top: 30px;
             border: 4px solid #444;
             border-top: 4px solid #ff6f00;
             border-radius: 50%;
@@ -63,8 +65,8 @@
 </head>
 
 <body>
-    <img class="logo" src="https://yourdomain.com/hex-logo.png" alt="Hex Robotics Logo" />
-    <div class="tagline">SCALE AND PRECISION, AT YOUR COMMAND.</div>
+    <div class="tagline">HEX ROBOTICS</div>
+    <div class="subtag">Scale and Precision, at Your Command</div>
     <div class="loader"></div>
     <div class="fallback">
         Having trouble? <a href="https://sites.google.com/view/jiten-topiwala/home">Click here</a>.
@@ -72,3 +74,4 @@
 </body>
 
 </html>
+
