Update index.html 2

--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
             height: 100vh;
         }
 
-        .tagline {
-            font-size: 2em;
+        .title {
+            font-size: 3em;
             font-weight: bold;
             color: #ff6f00;
-            margin-bottom: 10px;
             text-align: center;
-            text-shadow: 0 0 8px #ff6f00;
+            text-shadow: 0 0 10px #ff6f00;
+            margin-bottom: 10px;
         }
 
-        .subtag {
-            font-size: 1em;
+        .tagline {
+            font-size: 1.2em;
             color: #bbbbbb;
-            margin-bottom: 30px;
             text-align: center;
+            margin-bottom: 30px;
         }
 
         .loader {
@@ -65,8 +65,8 @@
 </head>
 
 <body>
-    <div class="tagline">HEX ROBOTICS</div>
-    <div class="subtag">Scale and Precision, at Your Command</div>
+    <div class="title">HEX ROBOTICS</div>
+    <div class="tagline">Scale and Precision, at Your Command</div>
     <div class="loader"></div>
     <div class="fallback">
         Having trouble? <a href="https://sites.google.com/view/jiten-topiwala/home">Click here</a>.
@@ -74,4 +74,3 @@
 </body>
 
 </html>
-
