Update index.html 3

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="3; url=https://liftterra-staging.b12sites.com/index#home" />
+    <meta http-equiv="refresh" content="3; url=https://sites.google.com/view/jiten-topiwala/home" />
     <title>Hex Robotics</title>
     <style>
         body {
