Update index.html 4

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="3; url=https://sites.google.com/view/jiten-topiwala/home" />
+    <meta http-equiv="refresh" content="3; url=https://www.linkedin.com/in/jitentopiwala/" />
     <title>Hex Robotics</title>
     <style>
         body {
@@ -18,16 +18,15 @@
         }
 
         .title {
-            font-size: 3em;
+            font-size: 4em;
             font-weight: bold;
             color: #ff6f00;
             text-align: center;
-            text-shadow: 0 0 10px #ff6f00;
             margin-bottom: 10px;
         }
 
         .tagline {
-            font-size: 1.2em;
+            font-size: 1.3em;
             color: #bbbbbb;
             text-align: center;
             margin-bottom: 30px;
@@ -69,8 +68,9 @@
     <div class="tagline">Scale and Precision, at Your Command</div>
     <div class="loader"></div>
     <div class="fallback">
-        Having trouble? <a href="https://sites.google.com/view/jiten-topiwala/home">Click here</a>.
+        Having trouble? <a href="https://www.linkedin.com/in/jitentopiwala/">Click here</a>.
     </div>
 </body>
 
 </html>
+
