--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="3; url=https://www.linkedin.com/in/jitentopiwala/" />
+    <meta http-equiv="refresh" content="3; url=https://hex-robotics-staging.b12sites.com/index" />
     <title>Hex Robotics</title>
     <style>
         body {
@@ -68,7 +68,7 @@
     <div class="tagline">Scale and Precision, at Your Command</div>
     <div class="loader"></div>
     <div class="fallback">
-        Having trouble? <a href="https://www.linkedin.com/in/jitentopiwala/">Click here</a>.
+        Having trouble? <a href="https://hex-robotics-staging.b12sites.com/index">Click here</a>.
     </div>
 </body>
 
