--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <li><a href="#hero">Home</a></li>
 
           <li><a href="#robots">Robots</a></li>
+          <li><a href="#solutions">Solutions</a></li>
 
           <li><a href="#team">Team</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -198,35 +199,112 @@
       </div>
     </section>
 
-    <!-- ================= Gallery Section ================= -->
-    <section id="gallery" class="section gallery">
+    <!-- ================= Solutions Section ================= -->
+    <section id="solutions" class="section solutions">
       <div class="container">
         <header class="section-header reveal">
-          <p class="eyebrow">Gallery</p>
-          <h2>Moments from the lab and field.</h2>
+          <p class="eyebrow">Solutions</p>
+          <h2>Tailored for every scale.</h2>
+          <p class="section-subtitle">
+            From precision surveying to heavy-duty retrofits, we have the right tool for the job.
+          </p>
         </header>
 
-        <div class="gallery-grid">
-          <!-- Replace these with your own images later -->
-          <figure class="gallery-item reveal">
-            <div class="gallery-placeholder"></div>
-            <figcaption>Prototype path-following test.</figcaption>
-          </figure>
+        <div class="solutions-container reveal">
 
-          <figure class="gallery-item reveal">
-            <div class="gallery-placeholder"></div>
-            <figcaption>Late-night tuning at the Hex lab.</figcaption>
-          </figure>
+          <!-- Column 1: Light Weight -->
+          <div class="solution-category">
+            <h3 class="category-title">Light Weight</h3>
+            <div class="solution-items">
+              <!-- Item 1 -->
+              <article class="solution-card">
+                <img src="assets/images/try.png" alt="Light Bot 1" class="solution-img">
+                <div class="solution-overlay">
+                  <h4>Hex-Mini A1</h4>
+                  <p>Compact inspection unit for tight spaces.</p>
+                </div>
+              </article>
+              <!-- Item 2 -->
+              <article class="solution-card">
+                <img src="assets/images/try.png" alt="Light Bot 2" class="solution-img">
+                <div class="solution-overlay">
+                  <h4>Hex-Painter</h4>
+                  <p>Automated wall painting attachment.</p>
+                </div>
+              </article>
+              <!-- Item 3 -->
+              <article class="solution-card">
+                <img src="assets/images/try.png" alt="Light Bot 3" class="solution-img">
+                <div class="solution-overlay">
+                  <h4>Hex-Brick</h4>
+                  <p>Precision brick-laying assistant.</p>
+                </div>
+              </article>
+            </div>
+          </div>
 
-          <figure class="gallery-item reveal">
-            <div class="gallery-placeholder"></div>
-            <figcaption>Field trial in a mixed indoor/outdoor course.</figcaption>
-          </figure>
+          <!-- Column 2: Survey -->
+          <div class="solution-category">
+            <h3 class="category-title">Survey</h3>
+            <div class="solution-items">
+              <!-- Item 1 -->
+              <article class="solution-card">
+                <img src="assets/images/try.png" alt="Survey Bot 1" class="solution-img">
+                <div class="solution-overlay">
+                  <h4>Sky-Eye V1</h4>
+                  <p>Aerial lidar mapping drone.</p>
+                </div>
+              </article>
+              <!-- Item 2 -->
+              <article class="solution-card">
+                <img src="assets/images/try.png" alt="Survey Bot 2" class="solution-img">
+                <div class="solution-overlay">
+                  <h4>Ground-Scout</h4>
+                  <p>Terrestrial laser scanner rover.</p>
+                </div>
+              </article>
+              <!-- Item 3 -->
+              <article class="solution-card">
+                <img src="assets/images/try.png" alt="Survey Bot 3" class="solution-img">
+                <div class="solution-overlay">
+                  <h4>Site-Mapper</h4>
+                  <p>Real-time construction progress tracker.</p>
+                </div>
+              </article>
+            </div>
+          </div>
 
-          <figure class="gallery-item reveal">
-            <div class="gallery-placeholder"></div>
-            <figcaption>Team demo day with partner teams.</figcaption>
-          </figure>
+          <!-- Column 3: Heavy -->
+          <div class="solution-category">
+            <h3 class="category-title">Heavy</h3>
+            <div class="solution-items">
+              <!-- Item 1 -->
+              <article class="solution-card">
+                <img src="assets/images/try.png" alt="Heavy Bot 1" class="solution-img">
+                <div class="solution-overlay">
+                  <h4>Excavator-Kit</h4>
+                  <p>Retrofit kit for 20T excavators.</p>
+                </div>
+              </article>
+              <!-- Item 2 -->
+              <article class="solution-card">
+                <img src="assets/images/try.png" alt="Heavy Bot 2" class="solution-img">
+                <div class="solution-overlay">
+                  <h4>Haul-Master</h4>
+                  <p>Autonomous dump truck system.</p>
+                </div>
+              </article>
+              <!-- Item 3 -->
+              <article class="solution-card">
+                <img src="assets/images/try.png" alt="Heavy Bot 3" class="solution-img">
+                <div class="solution-overlay">
+                  <h4>Dozer-Link</h4>
+                  <p>Remote teleoperation for dozers.</p>
+                </div>
+              </article>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
