added flow page iinit

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </button>
         <ul class="nav-links">
           <li><a href="#hero">Home</a></li>
-
+          <li><a href="products.html">Flow</a></li>
           <li><a href="#robots">Robots</a></li>
           <li><a href="#solutions">Solutions</a></li>
 
@@ -54,7 +54,7 @@
     <section id="hero" class="section hero">
       <!-- Video Background -->
       <div class="hero-video-wrapper">
-        <video src="assets/videos/try.mp4" autoplay muted loop playsinline></video>
+        <video src="assets/videos/All_in_one.mp4" autoplay muted loop playsinline></video>
         <div class="hero-overlay"></div>
       </div>
 
