--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section id="hero" class="section hero">
       <!-- Video Background -->
       <div class="hero-video-wrapper">
-        <video src="assets/videos/All_in_one.mp4" autoplay muted loop playsinline></video>
+        <video src="assets/videos/All_in_one_2.mp4" autoplay muted loop playsinline></video>
         <div class="hero-overlay"></div>
       </div>
 
@@ -106,98 +106,7 @@
 
 
     <!-- ================= Robots / Products Section ================= -->
-    <!-- ================= Robots / Products Horizontal Scroll ================= -->
-    <section id="robots" class="section robots-horizontal-section">
-      <div class="sticky-viewport">
-        <div class="horizontal-track">
 
-          <!-- 1. Intro Card -->
-          <div class="horizontal-item intro-card">
-            <div>
-              <p class="eyebrow" style="color:var(--color-accent); margin-bottom:1rem;">Our Fleet</p>
-              <h2 style="font-size: 3rem; line-height:1.1; margin-bottom:1.5rem;">Three Platforms.<br>One System.</h2>
-              <p class="section-subtitle" style="color:var(--color-text-muted); max-width:300px;">
-                Heavy machines, light robots, and site intelligence working in unison.
-              </p>
-            </div>
-            <div class="scroll-hint">
-              <span>EXPLORE</span>
-              <i class="fa-solid fa-arrow-right-long"></i>
-            </div>
-          </div>
-
-          <!-- 2. Retrofit (Heavy) -->
-          <article class="horizontal-item robot-card-horiz">
-            <div class="card-visual">
-              <img src="assets/images/try.png" alt="Heavy Retrofit">
-              <div class="card-overlay"></div>
-              <div class="card-icon-floating">🏗️</div>
-            </div>
-            <div class="card-content">
-              <h3>Retrofit & Teleoperate</h3>
-              <p>Turn any 40-ton excavator into a smart robot without replacing it.</p>
-              <div class="specs-row">
-                <span class="spec-tag">&lt;100ms Latency</span>
-                <span class="spec-tag">Any Brand</span>
-              </div>
-            </div>
-          </article>
-
-          <!-- 3. Modular (Light) -->
-          <article class="horizontal-item robot-card-horiz">
-            <div class="card-visual">
-              <!-- Using same placeholder as requested -->
-              <img src="assets/images/try.png" alt="Modular Robots">
-              <div class="card-overlay"></div>
-              <div class="card-icon-floating">🤖</div>
-            </div>
-            <div class="card-content">
-              <h3>Modular Robots</h3>
-              <p>Reconfigure instantly. One base drive for bricklaying, painting, or hauling.</p>
-              <div class="specs-row">
-                <span class="spec-tag">200kg Payload</span>
-                <span class="spec-tag">Indoor/Outdoor</span>
-              </div>
-            </div>
-          </article>
-
-          <!-- 4. Aerial Drones -->
-          <article class="horizontal-item robot-card-horiz">
-            <div class="card-visual">
-              <img src="assets/images/try.png" alt="Aerial Drones">
-              <div class="card-overlay"></div>
-              <div class="card-icon-floating">🚁</div>
-            </div>
-            <div class="card-content">
-              <h3>Aerial Intelligence</h3>
-              <p>Autonomous site mapping and progress monitoring from above.</p>
-              <div class="specs-row">
-                <span class="spec-tag">45min Flight</span>
-                <span class="spec-tag">4K Mapping</span>
-              </div>
-            </div>
-          </article>
-
-          <!-- 5. Ground Rovers -->
-          <article class="horizontal-item robot-card-horiz">
-            <div class="card-visual">
-              <img src="assets/images/try.png" alt="Ground Rovers">
-              <div class="card-overlay"></div>
-              <div class="card-icon-floating">📡</div>
-            </div>
-            <div class="card-content">
-              <h3>Ground Rovers</h3>
-              <p>Continuous site inspection and laser scanning at ground level.</p>
-              <div class="specs-row">
-                <span class="spec-tag">8hr Runtime</span>
-                <span class="spec-tag">Auto-Dock</span>
-              </div>
-            </div>
-          </article>
-
-        </div>
-      </div>
-    </section>
 
     <!-- ================= Solutions Section ================= -->
     <section id="solutions" class="section solutions">
@@ -218,25 +127,26 @@
             <div class="solution-items">
               <!-- Item 1 -->
               <article class="solution-card">
-                <img src="assets/images/try.png" alt="Light Bot 1" class="solution-img">
+                <video src="assets/videos/Demolition.mp4" autoplay muted loop playsinline
+                  class="solution-video"></video>
                 <div class="solution-overlay">
-                  <h4>Hex-Mini A1</h4>
+                  <h4>Demolition</h4>
                   <p>Compact inspection unit for tight spaces.</p>
                 </div>
               </article>
               <!-- Item 2 -->
               <article class="solution-card">
-                <img src="assets/images/try.png" alt="Light Bot 2" class="solution-img">
+                <video src="assets/videos/Painting.mp4" autoplay muted loop playsinline class="solution-video"></video>
                 <div class="solution-overlay">
-                  <h4>Hex-Painter</h4>
+                  <h4>Painting</h4>
                   <p>Automated wall painting attachment.</p>
                 </div>
               </article>
               <!-- Item 3 -->
               <article class="solution-card">
-                <img src="assets/images/try.png" alt="Light Bot 3" class="solution-img">
+                <video src="assets/videos/Drilling.mp4" autoplay muted loop playsinline class="solution-video"></video>
                 <div class="solution-overlay">
-                  <h4>Hex-Brick</h4>
+                  <h4>Drilling</h4>
                   <p>Precision brick-laying assistant.</p>
                 </div>
               </article>
@@ -249,7 +159,8 @@
             <div class="solution-items">
               <!-- Item 1 -->
               <article class="solution-card">
-                <img src="assets/images/try.png" alt="Survey Bot 1" class="solution-img">
+                <video src="assets/videos/survey_drone.mp4" autoplay muted loop playsinline
+                  class="solution-video"></video>
                 <div class="solution-overlay">
                   <h4>Sky-Eye V1</h4>
                   <p>Aerial lidar mapping drone.</p>
@@ -257,7 +168,7 @@
               </article>
               <!-- Item 2 -->
               <article class="solution-card">
-                <img src="assets/images/try.png" alt="Survey Bot 2" class="solution-img">
+                <video src="assets/videos/mapping.mp4" autoplay muted loop playsinline class="solution-video"></video>
                 <div class="solution-overlay">
                   <h4>Ground-Scout</h4>
                   <p>Terrestrial laser scanner rover.</p>
@@ -265,7 +176,8 @@
               </article>
               <!-- Item 3 -->
               <article class="solution-card">
-                <img src="assets/images/try.png" alt="Survey Bot 3" class="solution-img">
+                <video src="assets/videos/rover_outdoor_survey.mp4" autoplay muted loop playsinline
+                  class="solution-video"></video>
                 <div class="solution-overlay">
                   <h4>Site-Mapper</h4>
                   <p>Real-time construction progress tracker.</p>
@@ -280,7 +192,7 @@
             <div class="solution-items">
               <!-- Item 1 -->
               <article class="solution-card">
-                <img src="assets/images/try.png" alt="Heavy Bot 1" class="solution-img">
+                <video src="assets/videos/Excavator.mp4" autoplay muted loop playsinline class="solution-video"></video>
                 <div class="solution-overlay">
                   <h4>Excavator-Kit</h4>
                   <p>Retrofit kit for 20T excavators.</p>
@@ -288,7 +200,7 @@
               </article>
               <!-- Item 2 -->
               <article class="solution-card">
-                <img src="assets/images/try.png" alt="Heavy Bot 2" class="solution-img">
+                <video src="assets/videos/Excavator.mp4" autoplay muted loop playsinline class="solution-video"></video>
                 <div class="solution-overlay">
                   <h4>Haul-Master</h4>
                   <p>Autonomous dump truck system.</p>
@@ -296,7 +208,7 @@
               </article>
               <!-- Item 3 -->
               <article class="solution-card">
-                <img src="assets/images/try.png" alt="Heavy Bot 3" class="solution-img">
+                <video src="assets/videos/Excavator.mp4" autoplay muted loop playsinline class="solution-video"></video>
                 <div class="solution-overlay">
                   <h4>Dozer-Link</h4>
                   <p>Remote teleoperation for dozers.</p>
@@ -466,7 +378,15 @@
           </div>
         </div>
 
-        <form id="contact-form" class="contact-form reveal" novalidate>
+        <form id="contact-form" class="contact-form reveal" action="https://formsubmit.co/hexrobotics.ai@gmail.com"
+          method="POST">
+          <!-- FormSubmit Configuration -->
+          <input type="hidden" name="_captcha" value="false">
+          <input type="hidden" name="_template" value="table">
+          <input type="hidden" name="_subject" value="New Submission from Hex Robotics Website">
+          <!-- Next: usually for redirect, but we'll handle via AJAX so this is fallback -->
+          <input type="hidden" name="_next" value="https://hexrobotics.com/thanks.html">
+
           <div class="form-row">
             <label for="name">Name</label>
             <input id="name" name="name" type="text" required />
